--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         <h3>下载软件</h3>
         <ul class="downloads">
           <li><a  class='dl_exe_url'href="{{ site.github.repository_url }}/releases/latest">Download <strong>Github</strong></a></li>
-          <li><a  class='dl_zip_url' href="https://wwqg.lanzouf.com/b00qky81a">Download <strong>蓝奏云/密码:37md</strong></a></li>
+          <li><a  class='dl_zip_url' href="https://wwqg.lanzouf.com/b00qky81a"><strong>蓝奏云/密码:37md</strong></a></li>
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
