--- a/_includes/wxzs.html
+++ b/_includes/wxzs.html
@@ -1,5 +1,5 @@
-<script src="https://xx025.github.io/static/wxzs/zs.js"></script>
+<script src="//xx025.github.io/static/wxzs/zs.js"></script>
 
 
-<link rel="stylesheet" type="text/css" href="https://xx025.github.io/static/dark.css">
+<link rel="stylesheet" type="text/css" href="//xx025.github.io/static/dark.css">
 
