--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,4 +1,4 @@
 
-<script src="https://cdn.jsdelivr.net/gh/xx025/xx025.github.io@main/static/wxzs/zs.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/xx025/xx025.github.io@main/static/dark.css">
 
+<script src="https://loefairy.top/static/wxzs/zs.js"></script>
+<link rel="stylesheet" type="text/css" href="https://loefairy.top/static/dark.css">
