--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>[[title]]</title>
-    [% include "head_includes.html" %]
+    [% include "header.html" %]
     <style>
         .container-fluid {
             width: 700px;
