--- a/template/download.html
+++ b/template/download.html
@@ -125,27 +125,34 @@
                 this.issue_url = response.data.issue_url;
                 this.gh_url = response.data.gh_url;
             });
+            // 建立 WebSocket 连接
+            // 构建 WebSocket 连接的 URL
+            const currentLocation = window.location;
+            const wsUrl = `ws://${currentLocation.hostname}:${currentLocation.port}/api/wsdl`;
 
-            const urlParams = new URLSearchParams(window.location.search);
-            const params = Object.fromEntries(urlParams.entries());
-            axios.post('/api/new_dl', params)
-                .then(response => {
-                    console.log(response.data)
-                    setInterval(function () {
-                        axios.get('/api/progress')
-                            .then(response => {
-                                //{#console.log(response.data)#}
-                            }).catch(error => {
-                            console.error(error);
-                        });
-                    }, 1000)
-                }).catch(error => {
-                console.error(error);
-            });
+            // 建立 WebSocket 连接
+
+            this.socket = new WebSocket(wsUrl);
+
+            // 监听 WebSocket 连接成功事件
+            this.socket.onopen = (event) => {
+                console.log('WebSocket connection established');
+            };
+
+            // 监听 WebSocket 接收消息事件
+            this.socket.onmessage = (event) => {
+                console.log('WebSocket message received:', event.data);
+                // 在这里处理后端发送的消息
+            };
+
+            // 监听 WebSocket 关闭事件
+            this.socket.onclose = (event) => {
+                console.log('WebSocket connection closed');
+            };
         },
         methods: {
             openLink: function (url) {
-                axios.get('/api/open_link', {
+                axios.get('/open_link', {
                     params: {
                         url: url // 将链接作为参数传递给后端接口
                     }
@@ -159,10 +166,10 @@
             backHome: function () {
                 re = confirm('当前下载未结束，确定要返回吗？返回则需要重新下载')
                 if (re) {
-                    axios.post('/api/stop_download').then(response => {
-                        console.log(response.data)
-                        //{#location.href = '/'#}
-                    })
+                    // 关闭 WebSocket 连接, 后端自动处理断开后的下载任务
+                    if (this.socket !== null) {
+                        this.socket.close();
+                    }
                 }
             }
         }
