添加子模块方式 使用 yzw-dl

--- a/template/download.html
+++ b/template/download.html
@@ -159,6 +159,7 @@
 
                 if (data.download_finished) {
                     this.downloadFinished = true;
+                    alert('下载完成')
                 } else {
                     this.progressData = data;
                 }
