--- a/template/index.html
+++ b/template/index.html
@@ -66,7 +66,8 @@
                         <option value="" selected>选择门类</option>
                         <optgroup v-for="group in mllb_groups" :label="group.label" :key="group.label">
                             <option v-for="option in group.options" :value="option.value"
-                                    :key="option.label">{{ option.label }}</option>
+                                    :key="option.label">{{ option.label }}
+                            </option>
                         </optgroup>
                     </select>
                 </div>
@@ -77,7 +78,8 @@
                     <select class="custom-select" id="xklb" v-model="xklbSelected">
                         <option value="" selected> 选择学科类别</option>
                         <option v-for="option in xklb_options" :value="option.value"
-                                :key="option.label">{{ option.label }}</option>
+                                :key="option.label">{{ option.label }}
+                        </option>
                     </select>
                 </div>
             </div>
@@ -90,7 +92,8 @@
                     <select class="custom-select" id="zymc" v-model="zymcValue">
                         <option value="" selected> 选择专业</option>
                         <option v-for="option in zymc_options" :value="option"
-                                :key="option">{{ option }}</option>
+                                :key="option">{{ option }}
+                        </option>
                     </select>
                 </div>
             </div>
@@ -140,11 +143,11 @@
             <h6>下载完成</h6>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-danger btn-xs" @click=" getSelectedItems()">删除选中</button>
+<!--                    <button type="button" class="btn btn-danger btn-xs" @click=" getSelectedItems()">删除选中</button>-->
                 </div>
                 <div class="btn-group mr-2" role="group" aria-label="Second group">
-                    <button type="button" class="btn btn-primary btn-xs">刷新</button>
-                    <button type="button" class="btn btn-info btn-xs">合并导出</button>
+<!--                    <button type="button" class="btn btn-primary btn-xs">刷新</button>-->
+<!--                    <button type="button" class="btn btn-info btn-xs">合并导出</button>-->
                     <button type="button" class="btn btn-primary btn-xs">导出选中</button>
                 </div>
             </div>
@@ -241,7 +244,7 @@
                 };
 
                 if (this.mllbValue && this.xklbValue) {
-                    const baseUrl =window.location.origin
+                    const baseUrl = window.location.origin
                     // 打开新页面
                     location.href = baseUrl + `/dl?mllb=${params.mllb}&xklb=${params.xklb}&zymc=${params.zymc}&xxfs=${params.xxfs}&yxjh=${params.yxjh}&yxdq=${params.yxdq}`
                 } else {
