一出底部无关按钮

--- a/template/footer.html
+++ b/template/footer.html
@@ -1,7 +1,7 @@
 <div class="my-view-box" id="info" style="margin-top: 5px;bottom: 10px;">
-    <a href="#" class="badge badge-primary">版本: 10.1</a>
-    <a href="#" class="badge badge-info" style="background-color: #20c997">使用帮助</a>
+    <a href="#" class="badge badge-primary">版本: 23.12.19</a>
+<!--    <a href="#" class="badge badge-info" style="background-color: #20c997">使用帮助</a>-->
     <a href="#" class="badge badge-success" @click="openLink(issue_url)">反馈问题</a>
     <a href="#" class="badge badge-secondary" @click="openLink(gh_url)">GitHub:xx025</a>
-    <a href="#" class="badge badge-warning">支持作者</a>
+<!--    <a href="#" class="badge badge-warning">支持作者</a>-->
 </div>
